# digraphillion

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: test.yml
digraphillion/: __init__.py  graphset.py  release.py  setset.py
digraphillion/test/: test_digraphillion.py  test_graphset.py  test_setset.py
doc/: developers_guide.md
src/: pydigraphillion.cc  pydigraphillion.h
src/digraphillion/: graphset.cc  graphset.h  setset.cc  setset.h  type.h  util.cc  util.h  zdd.cc  zdd.h
src/digraphillion/spec/: FrontierData.hpp  FrontierDegreeSpecified.hpp  FrontierDirectedHamiltonianCycle.hpp  FrontierDirectedSTPath.hpp  FrontierDirectedSingleCycle.hpp  FrontierForest.hpp  FrontierManager.hpp  FrontierRootedForest.hpp  FrontierRootedTree.hpp
src/py3c/: LICENSE.MIT
src/subsetting/: LICENSE
src/subsetting/util/: Digraph.hpp  IntRange.hpp
src/tests/: a.out  build.sh  grid2x3.txt  grid3x3.txt  makefile  test_degree_constraints.cpp
tests/: test_digraphillion.py
