[metadata]
name = DiGraphillion
version = attr: release.version
description = Fast, lightweight library for a huge number of digraphs.
long_description = DiGraphillion is a Python library for efficient graphset operations. Unlike existing graph tools such as NetworkX, which are designed to manipulate just a single graph at a time, DiGraphillion handles a large set of digraphs with great efficiency.  Surprisingly, trillions of trillions of digraphs can be processed on a single computer.
keywords = graph, set, math
license_files = LICENSE
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
install_requires = future
